creusot/tests/should_fail/prusti/calls/fin_cur2.stderr
error[creusot]: the expression's lifetime `'a` must match the current time slice `'now` (found `&'a mut &'a X`, expected `&'now mut &_`)
 --> fin_cur2.rs:7:10
  |
7 |     fin2(x)
  |          ^

error: aborting due to previous error

